[package]
name = "nano_tinytools_sweeper"
version = "0.1.0"
authors = ["Daan Lubbers (contact@daanlubbers.nl)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
regex = "1.5"
lazy_static = "1.4"
nano_tinytools_common = { path = "../common"}
